#335 Fixes boxes alignment on front page

--- a/themes/sbvfrd/less/sbvfrd.less
+++ b/themes/sbvfrd/less/sbvfrd.less
@@ -944,6 +944,7 @@ div.memorize {
   min-height: 320px;
   max-width: 95%;
   margin-top: 30px;
+  margin-left: -15px;
   border-radius: 2px;
   padding: 20px 20px 0 20px;
 
